//file:noinspection GroovyUnusedAssignment
plugins {
    id "org.jetbrains.kotlin.jvm" version "2.0.0"
    id "org.jetbrains.kotlin.plugin.serialization" version "2.0.0"
    id "org.jetbrains.kotlin.plugin.spring" version "2.0.0"
    id "java"
    id "org.springframework.boot" version "3.3.0"
    id "io.spring.dependency-management" version "1.1.5"
}

group = 'com.jobosint'
version = '0.0.1'

java {
    sourceCompatibility = '21'
}

kotlin {
    jvmToolchain {
        version = '21'
    }
}

allprojects {
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
        maven { url 'https://repo.spring.io/milestone' }
        maven { url 'https://repo.spring.io/snapshot' }
    }
}

configurations.configureEach {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

dependencies {
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M6")
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'

    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
    implementation 'com.microsoft.playwright:playwright:1.50.0'

    implementation 'org.apache.commons:commons-text:1.11.0'
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
    implementation 'com.vladsch.flexmark:flexmark-html2md-converter:0.64.8'

    // https://github.com/mizosoft/methanol
    implementation 'com.github.mizosoft.methanol:methanol:1.7.0'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation 'org.jsoup:jsoup:1.17.2'

    // https://github.com/serpapi/google-search-results-java
    implementation 'com.github.serpapi:google-search-results-java:2.0.3'

    implementation 'com.github.slugify:slugify:3.0.6'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    runtimeOnly 'org.postgresql:postgresql:42.7.3'

    testImplementation 'org.springframework.boot:spring-boot-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
}

test {
    useJUnitPlatform()
}



